<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.unam.moviles.biblioteca.UpdateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">


        <TextView
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:textSize="35dp"
            android:text="@string/app_id"
            style="@style/txt"/>

        <Spinner
            android:id="@+id/sp_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout"
        android:id="@+id/linearLayout1">


        <TextView
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:textSize="35dp"
            android:text="@string/app_newId"
            style="@style/txt"/>

        <EditText
            android:id="@+id/edt_newId"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout1"
        android:id="@+id/linearLayout2">


        <TextView
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:textSize="35dp"
            android:text="@string/app_title"
            style="@style/txt"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout2"
        android:id="@+id/linearLayout3">


        <TextView
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:textSize="28dp"
            android:text="@string/app_newTitle"
            style="@style/txt"/>

        <EditText
            android:id="@+id/edt_newTitle"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout3"
        android:id="@+id/linearLayout4">


        <TextView
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:textSize="35dp"
            android:text="@string/app_author"
            style="@style/txt"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout4"
        android:id="@+id/linearLayout5">


        <TextView
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:textSize="28dp"
            android:text="@string/app_newAuthor"
            style="@style/txt"/>

        <EditText
            android:id="@+id/edt_newAuthor"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout5"
        android:layout_marginTop="42dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_consult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_consult"
            style="@style/btn_update"/>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_update"
            style="@style/btn_update"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_cancel"
            style="@style/btn_update"/>
    </LinearLayout>

</RelativeLayout>
